# goit-pythonweb-hw-10

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  contact.py
app/schemas/: contact.py
migrations/: env.py
